<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </androidx.recyclerview.widget.RecyclerView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <nz.massey.a336.timeline.Bar
            android:id="@+id/imgBar"
            android:layout_width="60dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="60dp"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <nz.massey.a336.timeline.SearchBox
            android:id="@+id/tbxGo"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="200dp"
            android:layout_marginBottom="6dp"
            android:backgroundTint="@android:color/white"
            android:hint="@string/tbxGoHint"
            android:importantForAutofill="no"
            android:inputType="numberSigned"
            android:minHeight="48dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnGo"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/btnGo"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="20dp"
            android:text="@string/btnGo"
            android:textColor="@android:color/white"
            android:visibility="visible" />

        <ImageView
            android:id="@+id/btnSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="21dp"
            android:layout_marginEnd="18dp"
            android:contentDescription="@string/btnSettings"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/imgBar"
            app:layout_constraintEnd_toEndOf="@+id/imgBar"
            app:layout_constraintStart_toStartOf="@+id/imgBar"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_baseline_settings_24" />

        <ImageView
            android:id="@+id/btnGo2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="70dp"
            android:layout_marginBottom="15dp"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_baseline_arrow_forward_24" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>